manifest/webapp/webapp.dg.yaml
---
# webapp deployment
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: gwcloud-web
  namespace: webapp
  labels:
    app: gwcloud
    role: web
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: gwcloud
        role: web
    spec:
      containers:
      - name: gwcloud-web
        image: dg_webapp:0.1
        ports:
        - name: webui
          containerPort: 8000
        - name: jobcontroller
          containerPort: 8001
        resources: {}
        tty: true
        command: ["bash"]
        args:
        - -c
        - "pip install gunicorn && python manage.py makemigrations && python manage.py migrate && python manage.py collectstatic --noinput && gunicorn bilbyui.wsgi -b 0.0.0.0:8000"
---
# webapp service
apiVersion: v1
kind: Service
metadata:
  namespace: webapp
  name: gwcloud-web
spec:
  ports:
  - name: webui
    port: 8000
    targetPort: 8001
  selector:
    app: gwcloud
    role: web
...
